--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -64,7 +64,7 @@ hr {
    ========================================================================== */
 
 .background {
-  background: url(http://eveworthington.com/assets/img/back.jpg) center 0 no-repeat fixed;
+  background: url(http://eveworthington.com/assets/img/back_2.jpg) center 0 no-repeat fixed;
   background-size: cover;
   background-position: center center;
   width: 100%;
