--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -66,7 +66,7 @@ hr {
 .background {
   background: url(http://eveworthington.com/assets/img/back_2.jpg) center 0 no-repeat fixed;
   background-size: cover;
-  background-position: center center;
+  background-position: 50% 65%;
   width: 100%;
 }
 
