footer bootstrap tweak

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,10 +1,10 @@
 
 <footer id = "footer">
-  
+
       <div id="social">
         <div class="container" id="contact">
           <div class="row centered">
-            <div class="col-lg-6 col-lg-offset-3">
+            <div class="col-sm-6 col-sm-offset-3">
 
               <div class="col-lg-3">
                 <a href="http://www.freecodecamp.com/1gb" target="_blank"><i class="fa fa-fire fa-fw"></i></a>
@@ -46,5 +46,5 @@
 
     </div>
     <! --/footerwrap -->
-    
-    </footer> 
+
+    </footer>
