--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,18 +4,18 @@
       <div id="social">
         <div class="container" id="contact">
           <div class="row centered">
-            <div class="col-sm-6 col-sm-offset-3">
+            <div class="col-lg-6 col-lg-offset-3 col-sm-8 col-sm-offset-2">
 
-              <div class="col-lg-3">
+              <div class="col-sm-3">
                 <a href="http://www.freecodecamp.com/1gb" target="_blank"><i class="fa fa-fire fa-fw"></i></a>
               </div>
-              <div class="col-lg-3">
+              <div class="col-sm-3">
                 <a href="https://github.com/1gb/" target="_blank"><i class="fa fa-github"></i></a>
               </div>
-              <div class="col-lg-3">
+              <div class="col-sm-3">
                 <a href="https://twitter.com/yesthisiseve" target="_blank"><i class="fa fa-twitter"></i></a>
               </div>
-              <div class="col-lg-3">
+              <div class="col-sm-3">
                 <a href="https://www.instagram.com/256mb/" target="_blank"><i class="fa fa-instagram"></i></a>
               </div>
 
