--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -38,7 +38,7 @@
               <p>bleep bloop.</p>
             </div>
             <div class="col-lg-4">
-              <p><a href="mailto:worthington.ee@gmail.com?Subject=Hi%20Eve!" target="_top">worthington.ee@gmail.com</a></p>
+              <p><a href="mailto:eve@eveworthington.com?Subject=Hi%20Eve!" target="_top">eve@eveworthington.com</a></p>
             </div>
           </div>
         </div>
