--- a/css/main.css
+++ b/css/main.css
@@ -195,7 +195,7 @@ a:focus {
 }
 .portfolio-section {
   width: 100%;
-  height: 200px;
+  height: 200;
   padding: 50px 0;
   color: white;
   background: url(../img/downloads-bg.jpg) no-repeat center center scroll;
@@ -336,19 +336,19 @@ body {
   fill: transparent;
   stroke: #fff;
   stroke-width: 2;
-  stroke-opacity: 0.4;
+  stroke-opacity: 0.85;
   animation: offset 3s linear forwards;
 }
 .st3 {
-  opacity:0.58;
+  opacity:0.76;
   fill:url(#SVGID_1_);
 }
 .st4 {
-  opacity:0.58;
+  opacity:0.76;
   fill:url(#SVGID_2_);
 }
 .st5 {
-  opacity:0.58;
+  opacity:0.76;
   fill:url(#SVGID_3_);
 }
 
@@ -368,11 +368,11 @@ body {
    	transform: scale(1);
  }
  50% {
-    -webkit-transform: scale(1.1);
-   	-moz-transform: scale(1.1);
-   	-o-transform: scale(1.1);
-   	-ms-transform: scale(1.1);
-   	transform: scale(1.1);
+    -webkit-transform: scale(1.2);
+   	-moz-transform: scale(1.2);
+   	-o-transform: scale(1.2);
+   	-ms-transform: scale(1.2);
+   	transform: scale(1.2);
  }
   75% {
     -webkit-transform: scale(1.05);
@@ -382,11 +382,11 @@ body {
    	transform: scale(1.05);
  }
   85% {
-    -webkit-transform: scale(1.1);
-   	-moz-transform: scale(1.1);
-   	-o-transform: scale(1.1);
-   	-ms-transform: scale(1.1);
-   	transform: scale(1.1);
+    -webkit-transform: scale(1.2);
+   	-moz-transform: scale(1.2);
+   	-o-transform: scale(1.2);
+   	-ms-transform: scale(1.2);
+   	transform: scale(1.2);
  }
  100% {
     -webkit-transform: scale(1);
@@ -403,16 +403,16 @@ body {
    transform: scale(1);
  }
  50% {
-   -moz-transform: scale(1.1);
-   transform: scale(1.1);
+   -moz-transform: scale(1.2);
+   transform: scale(1.2);
  }
  75% {
    -moz-transform: scale(1.05);
    transform: scale(1.05);
  }
  85% {
-   -moz-transform: scale(1.1);
-   transform: scale(1.1);
+   -moz-transform: scale(1.2);
+   transform: scale(1.2);
  }
  100% {
    -moz-transform: scale(1);
@@ -427,16 +427,16 @@ body {
    transform: scale(1);
  }
  50% {
-   -webkit-transform: scale(1.1);
-   transform: scale(1.1);
+   -webkit-transform: scale(1.2);
+   transform: scale(1.2);
  }
  75% {
    -webkit-transform: scale(1.05);
    transform: scale(1.05);
  }
  85% {
-   -webkit-transform: scale(1.1);
-   transform: scale(1.1);
+   -webkit-transform: scale(1.2);
+   transform: scale(1.2);
  }
  100% {
    -webkit-transform: scale(1);
@@ -452,16 +452,16 @@ body {
 
  }
  50% {
-   -ms-transform: scale(1.1);
-   transform: scale(1.1);
+   -ms-transform: scale(1.2);
+   transform: scale(1.2);
  }
  75% {
    -ms-transform: scale(1.05);
    transform: scale(1.05);
  }
  85% {
-   -ms-transform: scale(1.1);
-   transform: scale(1.1);
+   -ms-transform: scale(1.2);
+   transform: scale(1.2);
  }
  100% {
    -ms-transform: scale(1);
@@ -515,4 +515,22 @@ animation-delay: 3s;*/
   100% {
     stroke-dashoffset: 0;
   }
+}
+
+.galthumb {
+  cursor: pointer;
+}
+
+.modal {
+  color: #888;
+}
+
+.modal img {
+  margin-bottom: 20px;
+  text-align: center;
+}
+
+.modal p {
+  color: #888;
+  text-align: left;
 }
