--- a/css/main.css
+++ b/css/main.css
@@ -198,7 +198,7 @@ a:focus {
   height: 200;
   padding: 50px 0;
   color: white;
-  background: url(../img/downloads-bg.jpg) no-repeat center center scroll;
+  background: url(../img/foggyforest.jpeg) no-repeat center center scroll;
   background-color: #262626;
   -webkit-background-size: cover;
   -moz-background-size: cover;
@@ -519,6 +519,7 @@ animation-delay: 3s;*/
 
 .galthumb {
   cursor: pointer;
+  margin-bottom: 10px;
 }
 
 .modal {
