--- a/css/main.css
+++ b/css/main.css
@@ -3,12 +3,20 @@
  * Copyright 2013-2016 Start Bootstrap
  * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap/blob/gh-pages/LICENSE)
  */
+
+/*
+Colors:
+background: #130d06  --dark brown
+link light mossy green: #899878
+link hover darker green: #454C3C
+*/
+
 body {
   width: 100%;
   height: 100%;
   font-family: "Lora", "Helvetica Neue", Helvetica, Arial, sans-serif;
   color: white;
-  background-color: #262626;
+  background-color: #130d06;
 }
 html {
   width: 100%;
@@ -39,7 +47,7 @@ p {
   }
 }
 a {
-  color: #42DCA3;
+  color: #899878;
   -webkit-transition: all 0.2s ease-in-out;
   -moz-transition: all 0.2s ease-in-out;
   transition: all 0.2s ease-in-out;
@@ -47,7 +55,7 @@ a {
 a:hover,
 a:focus {
   text-decoration: none;
-  color: #1d9b6c;
+  color: #454C3C;
 }
 .light {
   font-weight: 400;
@@ -57,7 +65,7 @@ a:focus {
   border-bottom: 1px solid rgba(255, 255, 255, 0.3);
   text-transform: uppercase;
   font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  background-color: #262626;
+  background-color: #130d06;
 }
 .navbar-custom .navbar-toggle {
   color: white;
@@ -98,6 +106,7 @@ a:focus {
 .navbar-custom .nav li.active a {
   background-color: rgba(255, 255, 255, 0.3);
 }
+
 .navbar-custom .nav li.active a:hover {
   color: white;
 }
@@ -113,7 +122,7 @@ a:focus {
   }
   .navbar-custom.top-nav-collapse {
     padding: 0;
-    background: #262626;
+    background: #130d06;
     border-bottom: 1px solid rgba(255, 255, 255, 0.3);
   }
 }
@@ -125,7 +134,7 @@ a:focus {
   text-align: center;
   color: white;
   background: url(../img/intro-bg.jpg) no-repeat bottom center scroll;
-  background-color: #262626;
+  background-color: #130d06;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   background-size: cover;
@@ -195,31 +204,23 @@ a:focus {
 }
 .portfolio-section {
   width: 100%;
-  height: 200;
   padding: 50px 0;
   color: white;
   background: url(../img/foggyforest.jpeg) no-repeat center center scroll;
-  background-color: #262626;
+  background-color: #130d06;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   background-size: cover;
   -o-background-size: cover;
 }
-#map {
-  width: 100%;
-  height: 200px;
-  margin-top: 100px;
-}
+
 @media (min-width: 767px) {
   .content-section {
-    padding-top: 250px;
+    padding-top: 120px;
+    padding-bottom: 120px;
   }
   .portfolio-section {
     padding: 100px 0;
-  }
-  #map {
-    height: 400px;
-    margin-top: 250px;
   }
 }
 .btn {
@@ -232,16 +233,16 @@ a:focus {
   border-radius: 0;
 }
 .btn-default {
-  border: 1px solid #42DCA3;
-  color: #42DCA3;
+  border: 1px solid #899878;
+  color: #899878;
   background-color: transparent;
 }
 .btn-default:hover,
 .btn-default:focus {
-  border: 1px solid #42DCA3;
+  border: 1px solid #899878;
   outline: none;
-  color: #262626;
-  background-color: #42DCA3;
+  color: #130d06;
+  background-color: #899878;
 }
 ul.banner-social-buttons {
   margin-top: 0;
@@ -262,6 +263,7 @@ ul.banner-social-buttons {
   }
 }
 footer {
+  margin-top: 200px;
   padding: 50px 0;
 }
 footer p {
@@ -285,6 +287,11 @@ img::-moz-selection {
 }
 body {
   webkit-tap-highlight-color: rgba(255, 255, 255, 0.2);
+}
+
+.intro .intro-body .row {
+  margin-left: 0;
+  margin-right: 0;
 }
 
 .cabin svg {
@@ -519,11 +526,11 @@ animation-delay: 3s;*/
 
 .galthumb {
   cursor: pointer;
-  margin-bottom: 10px;
+  margin-bottom: 15px;
 }
 
 .modal {
-  color: #888;
+  color: #666;
 }
 
 .modal img {
@@ -532,6 +539,11 @@ animation-delay: 3s;*/
 }
 
 .modal p {
-  color: #888;
+  color: #666;
   text-align: left;
+}
+
+/* Bootstrap modal jump fix for desktop */
+body.modal-open .navbar-fixed-top {
+  left: -15px;
 }
