--- a/css/main.css
+++ b/css/main.css
@@ -206,7 +206,7 @@ a:focus {
   width: 100%;
   padding: 50px 0;
   color: white;
-  background: url(../img/foggyforest.jpeg) no-repeat center center scroll;
+  background: url(../img/foggyforest.jpg) no-repeat center center scroll;
   background-color: #130d06;
   -webkit-background-size: cover;
   -moz-background-size: cover;
