--- a/css/main.css
+++ b/css/main.css
@@ -14,7 +14,7 @@ link hover darker green: #454C3C
 body {
   width: 100%;
   height: 100%;
-  font-family: "Lora", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: "Raleway", "Helvetica Neue", Helvetica, Arial, sans-serif;
   color: white;
   background-color: #130d06;
 }
