--- a/style/app.less
+++ b/style/app.less
@@ -1,6 +1,7 @@
 // VARIABLES
 @middle-purple: #2F3061;
 @dark-purple: #0F0326;
+@dpurple: #422f36;
 @light-green: #B5D99C;
 @light-peach: #d9ae9c;
 @middle-green: #04471C;
@@ -8,122 +9,122 @@
 @orange-red: #E65F5C;
 @highlight: #FFFF82;
 @orange: #DBAF55;
+@orangebrown: #604804;
 @bg-color: #1D1C12;
 
-@font-face {
-    font-family: bloodcrow;
-    src: url(fonts/bloodcrow.ttf);
-}
-
-@font-face {
-    font-family: jacklantern;
-    src: url(fonts/JACKLB__.TTF);
-}
-
 body {
-  background-color: @bg-color;
+  background: @bg-color;
+  background: -webkit-linear-gradient(@orange, @orangebrown, @bg-color); /* For Safari 5.1 to 6.0 */
+  background: -o-linear-gradient(@orange, @orangebrown, @bg-color); /* For Opera 11.1 to 12.0 */
+  background: -moz-linear-gradient(@orange, @orangebrown, @bg-color); /* For Firefox 3.6 to 15 */
+  background: linear-gradient(@orange, @orangebrown, @bg-color); /* Standard syntax */
+
+  backgroud-size: cover cover;
+  background-repeat: no-repeat;
   font-family: 'Courier New', Courier, monospace;
   color: @light-green;
   text-align: center;
+  height: 100%;
+  margin: 0;
+  background-attachment: fixed;
+
+  a {
+    text-decoration: none;
+    color: inherit;
+  }
+
+  @font-face {
+    font-family: bloodcrow;
+    src: url(fonts/bloodcrow.ttf);
+  }
 }
 
-// TOP AREA
-#image4999 {
-  transform-origin: 770px 470px;
-  animation: sway 8s ease-in-out infinite;
-}
-
-.hut-area {
+.side-menu {
+  width: 150px;
   display: flex;
-  flex-direction: row;
-  align-items: center;
-  // background-color: #1D1C12;
-  width: 100%;
-  max-height: 850px;
+  flex-direction: column;
+  justify-content: center;
+  margin: 50px 25px;
+  float: left;
 
-  .hut {
-    width: 100%;
-    #hut-img {
-      max-width: 100%;
-      height: 100%;
-    }
+  .about, .portfolio {
+    margin-top: 5px;
   }
 
-  .title {
-    width: 100%;
-    position: relative;
-    right: 5%;
-    animation: glow 8s linear infinite;
-
-    .eve {
-      letter-spacing: 3px;
-      font-size: 50px;
-      font-family: 'bloodcrow', sans-serif;
-      margin-bottom: 10px;
-      text-shadow: 0 0 0.2em @highlight;
-    }
-
-    .subtitle {
-      font-size: 20px;
-      letter-spacing: 1px;
-    }
+  .sidelinks {
+    margin-top: 15px;
+    padding-top: 15px;
+    padding-bottom: 15px;
+    border-right: 1px solid @light-green;
   }
 
-  .btn:hover {
-    cursor: pointer;
-  }
-
-  .btn {
-    display: inline-block;
-    width: 121px;
+  .active {
     color: @bg-color;
-    margin-top: 45px;
-    margin-right: 5px;
+    background-color: @light-green;
+  }
+
+  .main-icon {
+    height: 75px;
+    line-height: 75px;
     padding: 2px;
+    letter-spacing: 8px;
+    font-size: 40px;
+    font-family: 'bloodcrow', sans-serif;
+    color: @light-green;
+    cursor: pointer;
 
-    .portfolio {
-      padding: 2px;
-      background: @light-green;
-      transform: rotate(4deg);
+    svg {
+      width: 75px;
+      height: 75px;
     }
+  }
 
-    .about {
-      padding: 2px;
-      background: @light-green;
-      transform: rotate(-4deg);
-    }
+  .main-icon:hover {
+    text-shadow: 0 0 0.2em @highlight;
+  }
+}
+
+.about-section, .portfolio-section {
+  line-height: 1.5;
+  margin-top: 50px;
+  font-size: 16px;
+  display: inline-block;
+  width: 70%;
+  min-height: 350px;
+
+  .email {
+    color: @orange;
+  }
+
+  .email:hover {
+    background-color: @orange;
+    color: @bg-color;
   }
 }
 
 // DUNNO MAYBE DELETE
 
-.about-section {
-  // font-family: 'Walter Turncoat', sans-serif;
-  font-size: 20px;
-  display: inline-block;
-
-}
-
-.portfolio-container {
-  width: 88%;
-  margin: 0 auto;
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: center;
-
-    .box {
-      height: 120px;
-      width: 220px;
-      margin: 20px;
-      border-radius: 5px;
-      background-color: @middle-green;
-      color: white;
-      text-align: center;
-      vertical-align: middle;
-      line-height: 120px;
-    }
-}
+//
+// .portfolio-container {
+//   width: 88%;
+//   margin: 0 auto;
+//   display: flex;
+//   flex-direction: row;
+//   flex-wrap: wrap;
+//   justify-content: center;
+//
+//     .box {
+//       height: 120px;
+//       width: 220px;
+//       margin: 20px;
+//       border-radius: 5px;
+//       background-color: @middle-green;
+//       color: white;
+//       text-align: center;
+//       vertical-align: middle;
+//       line-height: 120px;
+//     }
+// }
 
 // SOCIAL LINKS
 
@@ -148,27 +149,21 @@ body {
   }
 }
 
-// ANIMATION
-@keyframes glow {
-    0%   {opacity: 1;}
-    5%  {opacity: 0.6;}
-    10%  {opacity: 1;}
-    50%  {opacity: 1;}
-    65%  {opacity: 0.7;}
-    100% {opacity: 1;}
-}
-
-@keyframes sway {
-    0%   {transform: rotate(9deg)}
-    50%  {transform: rotate(-9deg)}
-    100% {transform: rotate(9deg)}
-}
-
 // MEDIA QUERIES
+
+@media (min-width: 880px) {
+  .hut-area .title {
+    width: auto;
+  }
+}
 
 @media (max-width: 600px) {
   .hut-area {
     display: inline;
+
+    .hut {
+      width: 100%;
+    }
 
     .title {
       right: auto;
@@ -181,14 +176,35 @@ body {
     }
   }
 
+  .side-menu {
+    width: auto;
+    margin: 0 auto;
+    float: none;
+
+    .sidelinks {
+      padding: 0;
+      border: 1px solid @light-green;
+
+      .portfolio, .about {
+        padding: 6px 0;
+        margin: 0;
+      }
+    }
+  }
+
+  .about-section {
+    width: 100%;
+  }
+
+
   .social-buttons {
     list-style-type: none;
-    margin: 0;
+    margin: 10px 0 0 0;
     padding: 0;
 
     li {
       width: 25px;
-      padding: 17px;
+      margin: 10px;
       display: inline-block;
     }
   }
