--- a/style/homepage.less
+++ b/style/homepage.less
@@ -202,3 +202,65 @@
     50%  {transform: rotate(-9deg)}
     100% {transform: rotate(9deg)}
 }
+
+
+// MEDIA QUERIES
+
+@media (min-width: 880px) {
+  .hut-area .title {
+    width: auto;
+  }
+}
+
+@media (max-width: 600px) {
+  .hut-area {
+    display: inline;
+
+    .hut {
+      width: 100%;
+    }
+
+    .title {
+      right: auto;
+      .eve {
+        font-size: 40px;
+      }
+      .subtitle {
+        font-size: 16px;
+      }
+    }
+  }
+
+  .side-menu {
+    width: auto;
+    margin: 0 auto;
+    float: none;
+
+    .sidelinks {
+      padding: 0;
+      border: 1px solid @light-green;
+
+      .portfolio, .about {
+        padding: 6px 0;
+        margin: 0;
+      }
+    }
+  }
+
+  .about-section {
+    width: 100%;
+  }
+
+
+  .social-buttons {
+    list-style-type: none;
+    margin: 10px 0 0 0;
+    padding: 0;
+
+    li {
+      width: 25px;
+      margin: 10px;
+      display: inline-block;
+    }
+  }
+}
