--- a/style/portfolio.less
+++ b/style/portfolio.less
@@ -1,16 +1,3 @@
-// VARIABLES
-@middle-purple: #2F3061;
-@dark-purple: #0F0326;
-@dpurple: #422f36;
-@light-green: #B5D99C;
-@light-peach: #d9ae9c;
-@middle-green: #04471C;
-@dark-green: #0D2818;
-@orange-red: #E65F5C;
-@highlight: #FFFF82;
-@orange: #DBAF55;
-@orangebrown: #604804;
-@bg-color: #1D1C12;
 
 
 .portfolio-container {
@@ -22,11 +9,27 @@
   .item {
     width: 200px;
     height: 150px;
-    margin: 2px;
+    margin: 10px;
 
     .portfolio-thumb {
       width: 100%;
     }
   }
 
+  .item:hover {
+    background-color: #888;
+    opacity: 0.8;
+  }
+}
+
+
+
+// MEDIA QUERIES
+
+@media (max-width: 600px) {
+  .portfolio-container {
+    .item {
+
+    }
+  }
 }
