--- a/style/homepage.less
+++ b/style/homepage.less
@@ -122,7 +122,7 @@
       font-size: 50px;
       font-family: 'bloodcrow', sans-serif;
       margin-bottom: 10px;
-      text-shadow: 0 0 0.2em @orange;
+      text-shadow: 0 0 0.2em #444;
       // animation: glow 8s linear infinite;
     }
 
