--- a/style/portfolio.less
+++ b/style/portfolio.less
@@ -5,11 +5,13 @@
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: center;
+  margin-bottom: 30px;
+  margin-top: 20px;
 
   .item {
     width: 200px;
     height: 150px;
-    margin: 10px;
+    margin: 10px 10px 35px;
 
     .portfolio-thumb {
       width: 100%;
@@ -19,10 +21,96 @@
   .item:hover {
     background-color: #888;
     opacity: 0.8;
+    cursor: pointer;
   }
 }
 
+.hidden {
+  display: none;
+}
 
+.overlay {
+  position: fixed;
+  z-index: 2;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgb(0,0,0);
+  background-color: rgba(0,0,0,0.4);
+}
+
+.modal {
+  z-index: 3;
+  position: absolute;
+  left: 50%;
+  top: 10%;
+  transform: translate(-50%, 0);
+  width: 600px;
+  padding: 30px 0;
+  border-radius: 10px;
+  background: black;
+
+  .close {
+    height: 24px;
+    width: 24px;
+    position: absolute;
+    top: 15px;
+    right: 15px;
+    background: url(img/close.svg) center center no-repeat;
+    cursor: pointer;
+  }
+
+  .modal-img-area {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+
+    .left-arrow {
+      height: 24px;
+      width: 24px;
+      margin-left: 20px;
+      background: url(img/arrow-left.svg) center center no-repeat;
+      cursor: pointer;
+    }
+
+    .right-arrow {
+      height: 24px;
+      width: 24px;
+      margin-right: 20px;
+      background: url(img/arrow-right.svg) center center no-repeat;
+      cursor: pointer;
+    }
+
+    .modal-image {
+      vertical-align: middle;
+      margin-bottom: 10px;
+    }
+  }
+
+  .modal-title {
+    font-size: 30px;
+    font-weight: bold;
+    margin-bottom: 10px;
+  }
+
+  .description {
+    text-align: left;
+    margin: 10px 30px 0;
+  }
+
+  .tools {
+    margin: 18px 30px;
+    text-align: left;
+  }
+
+  .link {
+    color: @highlight;
+    text-decoration: underline;
+  }
+}
 
 // MEDIA QUERIES
 
