--- a/style/portfolio.less
+++ b/style/portfolio.less
@@ -37,7 +37,7 @@
   width: 100%;
   height: 100%;
   overflow: auto;
-  background-color: rgb(0,0,0);
+  background-color: #3B0425;
   background-color: rgba(0,0,0,0.4);
 }
 
@@ -53,12 +53,13 @@
   background: black;
 
   .close {
-    height: 24px;
-    width: 24px;
+    height: 19px;
+    width: 19px;
     position: absolute;
     top: 15px;
     right: 15px;
     background: url(img/close.svg) center center no-repeat;
+    background-size: contain;
     cursor: pointer;
   }
 
@@ -115,9 +116,24 @@
 // MEDIA QUERIES
 
 @media (max-width: 600px) {
-  .portfolio-container {
-    .item {
+  .modal {
+    width: 90%;
+    padding: 10px 0;
 
+    .close {
+      height: 15px;
+      width: 15px;
+    }
+
+    .modal-img-area {
+      .modal-image {
+        width: 250px;
+      }
+    }
+
+    .modal-title {
+      font-size: 20px;
+      margin-bottom: 10px;
     }
   }
 }
