--- a/app.css
+++ b/app.css
@@ -764,11 +764,13 @@ body a {
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: center;
+  margin-bottom: 30px;
+  margin-top: 20px;
 }
 .portfolio-container .item {
   width: 200px;
   height: 150px;
-  margin: 10px;
+  margin: 10px 10px 35px;
 }
 .portfolio-container .item .portfolio-thumb {
   width: 100%;
@@ -776,4 +778,98 @@ body a {
 .portfolio-container .item:hover {
   background-color: #888;
   opacity: 0.8;
+  cursor: pointer;
+}
+.hidden {
+  display: none;
+}
+.overlay {
+  position: fixed;
+  z-index: 2;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: #3B0425;
+  background-color: rgba(0, 0, 0, 0.4);
+}
+.modal {
+  z-index: 3;
+  position: absolute;
+  left: 50%;
+  top: 10%;
+  transform: translate(-50%, 0);
+  width: 600px;
+  padding: 30px 0;
+  border-radius: 10px;
+  background: black;
+}
+.modal .close {
+  height: 19px;
+  width: 19px;
+  position: absolute;
+  top: 15px;
+  right: 15px;
+  background: url(img/close.svg) center center no-repeat;
+  background-size: contain;
+  cursor: pointer;
+}
+.modal .modal-img-area {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+.modal .modal-img-area .left-arrow {
+  height: 24px;
+  width: 24px;
+  margin-left: 20px;
+  background: url(img/arrow-left.svg) center center no-repeat;
+  cursor: pointer;
+}
+.modal .modal-img-area .right-arrow {
+  height: 24px;
+  width: 24px;
+  margin-right: 20px;
+  background: url(img/arrow-right.svg) center center no-repeat;
+  cursor: pointer;
+}
+.modal .modal-img-area .modal-image {
+  vertical-align: middle;
+  margin-bottom: 10px;
+}
+.modal .modal-title {
+  font-size: 30px;
+  font-weight: bold;
+  margin-bottom: 10px;
+}
+.modal .description {
+  text-align: left;
+  margin: 10px 30px 0;
+}
+.modal .tools {
+  margin: 18px 30px;
+  text-align: left;
+}
+.modal .link {
+  color: #FFFF82;
+  text-decoration: underline;
+}
+@media (max-width: 600px) {
+  .modal {
+    width: 90%;
+    padding: 10px 0;
+  }
+  .modal .close {
+    height: 15px;
+    width: 15px;
+  }
+  .modal .modal-img-area .modal-image {
+    width: 250px;
+  }
+  .modal .modal-title {
+    font-size: 20px;
+    margin-bottom: 10px;
+  }
 }
