Portfolio page link styling

--- a/style/variables.less
+++ b/style/variables.less
@@ -3,7 +3,7 @@
 @dark-purple: #0F0326;
 @dpurple: #422f36;
 @main-color: #FFC86F;
-// @light-green: #B5D99C;
+@light-green: #B5D99C;
 @light-peach: #d9ae9c;
 @middle-green: #04471C;
 @dark-green: #0D2818;
