--- a/style/portfolio.less
+++ b/style/portfolio.less
@@ -100,6 +100,11 @@
   .description {
     text-align: left;
     margin: 10px 30px 0;
+    
+    a {
+      color: @highlight;
+      text-decoration: underline;
+    }
   }
 
   .tools {
