--- a/style/variables.less
+++ b/style/variables.less
@@ -12,7 +12,8 @@
 @highlight: #FFFF82;
 @orange: #DBAF55;
 @orangebrown: #604804;
-@bg-color: #1D1C12;
+// @bg-color: #1D1C12;
+@bg-color: #111111;
 
 
 @topColor: #3B0425;
