--- a/style/app.less
+++ b/style/app.less
@@ -1,10 +1,10 @@
 
 body {
   background: @bg-color;
-  background: -webkit-linear-gradient(@topColor, @middle, @bottomColor); /* For Safari 5.1 to 6.0 */
-  background: -o-linear-gradient(@topColor, @middle, @bottomColor); /* For Opera 11.1 to 12.0 */
-  background: -moz-linear-gradient(@topColor, @middle, @bottomColor); /* For Firefox 3.6 to 15 */
-  background: linear-gradient(@topColor, @middle, @bottomColor); /* Standard syntax */
+  // background: -webkit-linear-gradient(@topColor, @middle, @bottomColor); /* For Safari 5.1 to 6.0 */
+  // background: -o-linear-gradient(@topColor, @middle, @bottomColor); /* For Opera 11.1 to 12.0 */
+  // background: -moz-linear-gradient(@topColor, @middle, @bottomColor); /* For Firefox 3.6 to 15 */
+  // background: linear-gradient(@topColor, @middle, @bottomColor); /* Standard syntax */
 
   backgroud-size: cover cover;
   background-repeat: no-repeat;
